--- a/public/app/components/login/login.html
+++ b/public/app/components/login/login.html
@@ -1,1 +1,21 @@
-<div>Login Page</div>
+    <div class="col-md-12">
+      
+      <form ng-submit="formSubmit()" class="form">
+        <div class="col-md-offset-4 col-md-4">
+            <h3>Login to App</h3>
+          <div class="form-group">
+            <input type="text" class="form-control" ng-model="username" placeholder="username" required=""/>
+          </div> 
+
+          <div class="form-group">
+            <input type="password" class="form-control" ng-model="password" placeholder="password" required=""/>
+          </div>
+
+          <div class="form-group">
+            <button type="submit" class="btn btn-success">Login</button>
+            <span class="text-danger">{{ error }}</span>
+          </div>
+
+        </div>
+      </form>
+</div>
