--- a/public/app/components/user/user.html
+++ b/public/app/components/user/user.html
@@ -1,4 +1,4 @@
-<!-- <div class="container" ng-show="state.includes('dashboard.team.user')">
+<!-- <div class="container" ng-show="state.includes('root.team.user')">
    
    <div class="row">
    <div class="col-md-6">Name: {{user.name}}</div>
