--- a/public/app/components/layout/layout.html
+++ b/public/app/components/layout/layout.html
@@ -4,9 +4,9 @@
       <div class="row">
          <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar" ng-show="isActive('manager')">
-               <li ng-class="{active: state.includes('dashboard.tasks')}"><a ui-sref="dashboard.tasks">Tasks</a></li>
-               <li ng-class="{active: state.includes('dashboard.newTask')}"><a ui-sref="dashboard.newTask">New Task</a></li>
-               <li ng-class="{active: state.includes('dashboard.team') || state.includes('dashboard.teamMember')}"><a ui-sref="dashboard.team">Team</a></li>
+               <li ng-class="{active: state.includes('root.tasks')}"><a ui-sref="root.tasks">Tasks</a></li>
+               <li ng-class="{active: state.includes('root.newTask')}"><a ui-sref="root.newTask">New Task</a></li>
+               <li ng-class="{active: state.includes('root.team') || state.includes('root.teamMember')}"><a ui-sref="root.team">Team</a></li>
             </ul>
             <ul class="nav nav-sidebar" ng-show="isActive('admin')">
                <li class="active"><a href="">Group of Activities</a></li>
