--- a/public/app/components/login/login.html
+++ b/public/app/components/login/login.html
@@ -1,14 +1,14 @@
-    <div class="col-md-12">
+    <div class="col-md-12" style="margin-top:150px">
       
       <form ng-submit="formSubmit()" class="form">
         <div class="col-md-offset-4 col-md-4">
-            <h3>Login to App</h3>
+            <h2><b>Login to App</b></h2>
           <div class="form-group">
-            <input type="text" class="form-control" ng-model="username" placeholder="username" required=""/>
+            <input type="text" class="form-control" ng-model="username" placeholder="Username" required=""/>
           </div> 
 
           <div class="form-group">
-            <input type="password" class="form-control" ng-model="password" placeholder="password" required=""/>
+            <input type="password" class="form-control" ng-model="password" placeholder="Password" required=""/>
           </div>
 
           <div class="form-group">
