--- a/public/app/components/newTask/newTask.html
+++ b/public/app/components/newTask/newTask.html
@@ -1,9 +1,8 @@
-<div class="container">
    <div class="row">
       <div class="col-md-6">
          <h2>Tasks </h2>
-         <div class="list-group list-cust">
-            <ul style="padding:0px">
+         <div class="list-group">
+            <ul style="padding:0px;max-height: 400px;overflow-y: scroll;" >
                <li class="list-group-item" ng-repeat="task in tasks | orderBy: '-value'" ng-class="{active : activeTask === task}"  ng-click="selectedTask(task)">
                   {{task.name + " (Value: " + task.value +")"}}
                </li>
@@ -12,14 +11,15 @@
       </div>
       <div class="col-md-6">
          <h2>Members </h2>
-         <div class="list-group list-cust">
-            <ul style="padding:0px">
+         <div class="list-group">
+            <ul style="padding:0px;max-height: 400px;overflow-y: scroll;">
                <li class="list-group-item" ng-repeat='member in members' ng-class="{active : activeMember === member}"  ng-click="selectedMember(member)">
                   {{member.name}}
                </li>
             </ul>
          </div>
       </div>
-      <button type="button" class="btn-lg btn-success btn-block">Assign</button>
    </div>
-</div>
+   <div class="row" style="text-align: center">
+         <button type="button" class="btn btn-lg btn-success" ng-click="assignTask()" ng-class="{disabled: buttonDisabled()}">Assign</button>
+   </div>
