--- a/public/app/components/tasks/tasks.html
+++ b/public/app/components/tasks/tasks.html
@@ -8,7 +8,7 @@
                <th>Date</th>
                <th>Status</th>
                <th>Value</th>
-               <th ng-show="state.includes('dashboard.tasks')">Approval Status</th>
+               <th ng-show="state.includes('root.tasks')">Approval Status</th>
             </tr>
          </thead>
          <tbody>
@@ -18,7 +18,7 @@
                <td>{{task.status}}
                <img ng-src="{{imgSrc(task.status)}}" height="20" width="20" title="{{task.status}}"></td>
                <td>{{task.value}}</td>
-               <td ng-show="state.includes('dashboard.tasks')">
+               <td ng-show="state.includes('root.tasks')">
                <button type="button" class="btn btn-success" ng-class="{disabled: task.status != 'Completed'}">Approve</button>
                <button type="button" class="btn btn-danger" ng-class="{disabled: task.status != 'Completed'}">Disapprove</button>
                </td>
