--- a/public/app/shared/view/header.html
+++ b/public/app/shared/view/header.html
@@ -1,12 +1,12 @@
- <div>
+ <div id="header-ers">
 <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
          <div class="navbar-header">
             <a class="navbar-brand">Hi, {{name}}</a>
          </div>
-         <div id="navbar" class="navbar-collapse collapse">
+         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-show="role">Total Reward Points{{value}}</li>
+                <li ng-show="role == 'user'"><a>Total Reward Points {{value}}</a></li>
                <li><a ng-click ="logout()">Log Out</a></li>
             </ul>
          </div>
