--- a/public/app/shared/view/tasks.html
+++ b/public/app/shared/view/tasks.html
@@ -1,4 +1,4 @@
-<div class="container" ng-show="state.includes('dashboard.teamMember')">
+<div class="container" ng-show="state.includes('root.teamMember')">
    
    <div class="row">
    <div class="col-md-6"><h3>Name: {{user.name}}</h3></div>
@@ -21,7 +21,7 @@
                <th>Date</th>
                <th>Status</th>
                <th>Value</th>
-               <th ng-show="state.includes('dashboard.tasks')">Approval Status</th>
+               <th ng-show="state.includes('root.tasks')">Approval Status</th>
             </tr>
          </thead>
          <tbody>
@@ -31,13 +31,13 @@
                <td>{{task.status}}
                <img ng-src="{{imgSrc(task.status)}}" height="20" width="20" title="{{task.status}}"></td>
                <td>{{task.value}}</td>
-               <td ng-show="state.includes('dashboard.tasks')">
+               <td ng-show="state.includes('root.tasks')">
                <button type="button" class="btn btn-success" ng-class="{disabled: task.status != 'Completed'}">Approve</button>
                <button type="button" class="btn btn-danger" ng-class="{disabled: task.status != 'Completed'}">Disapprove</button>
                </td>
-                <td ng-show="state.includes('dashboard.user')">
-               <button type="button" class="btn btn-success" ng-class="{disabled: task.status == 'Completed' || task.status == 'Pending'}">Completed</button>
-               <button type="button" class="btn btn-danger" ng-class="{disabled: task.status == 'Completed' || task.status == 'Pending'}">Reject</button>
+                <td ng-show="state.includes('root.user')">
+               <button type="button" class="btn btn-success" ng-class="{disabled: task.status == 'Completed' || task.status == 'Expired'}">Completed</button>
+               <button type="button" class="btn btn-danger" ng-class="{disabled: task.status == 'Completed' || task.status == 'Expired'}">Reject</button>
                </td>
             </tr>
          </tbody>
