newTask screen modified

--- a/public/app/components/login/login.html
+++ b/public/app/components/login/login.html
@@ -4,11 +4,11 @@
         <div class="col-md-offset-4 col-md-4">
             <h2><b>Login to App</b></h2>
           <div class="form-group">
-            <input type="text" class="form-control" ng-model="username" placeholder="Username" required=""/>
+            <input type="text" class="form-control" ng-model="credentials.username" placeholder="Username" required=""/>
           </div> 
 
           <div class="form-group">
-            <input type="password" class="form-control" ng-model="password" placeholder="Password" required=""/>
+            <input type="password" class="form-control" ng-model="credentials.password" placeholder="Password" required=""/>
           </div>
 
           <div class="form-group">
