--- a/public/app/components/newTask/newTask.html
+++ b/public/app/components/newTask/newTask.html
@@ -2,8 +2,8 @@
       <div class="col-md-6">
          <h2>Tasks </h2>
          <div class="list-group">
-            <ul style="padding:0px;max-height: 400px;overflow-y: scroll;" >
-               <li class="list-group-item new-tasks" id="{{task.id}}" ng-repeat="task in tasks | orderBy: '-value'" ng-class="{active : contains($event)}"  ng-click="modifylist($event)">
+            <ul style="padding:0px;max-height: 300px;overflow-y: scroll;" >
+               <li class="list-group-item new-tasks" ng-repeat="task in tasks | orderBy: '-value'" ng-class="{active : task.id == activeTaskId}"  ng-click="activateTask(task.id)">
                   {{task.name + " (Value: " + task.value +")"}}
                </li>
             </ul>
@@ -12,8 +12,8 @@
       <div class="col-md-6">
          <h2>Members </h2>
          <div class="list-group">
-            <ul style="padding:0px;max-height: 400px;overflow-y: scroll;">
-               <li class="list-group-item new-members" id="{{member.id}}" ng-repeat='member in members' ng-class="{active : contains($event, member.id)}"  ng-click="modifylist($event, member)">
+            <ul style="padding:0px;max-height: 300px;overflow-y: scroll;">
+               <li class="list-group-item new-members" ng-repeat='member in members' ng-class="{active : activeMemberIds.indexOf(member.id) > -1}"  ng-click="activateMembers(member.id)">
                   {{member.name}}
                </li>
             </ul>
@@ -26,6 +26,6 @@
         </textarea>
         </div>
     <br/>
-   <div class="row" style="text-align: center">
+   <div class="row" style="text-align: center;margin-bottom: 30px">
          <button type="button" class="btn btn-lg btn-success" ng-click="assignTask()" ng-class="{disabled: buttonDisabled()}">Assign</button>
    </div>
