--- a/public/app/shared/view/tasks.html
+++ b/public/app/shared/view/tasks.html
@@ -1,4 +1,4 @@
-<div class="container" ng-show="state.includes('root.teamMember')">
+<div ng-show="state.includes('root.teamMember')">
    
    <div class="row">
    <div class="col-md-6"><h3>Name: {{user.name}}</h3></div>
