--- a/public/app/shared/view/header.html
+++ b/public/app/shared/view/header.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
          <div class="navbar-header">
-            <a class="navbar-brand">Hi, {{name}} ({{role}})</a>
+            <a class="navbar-brand">Hi, {{name}} (Role: {{role.charAt(0).toUpperCase() + role.slice(1)}})</a>
          </div>
          <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
