--- a/public/dash.css
+++ b/public/dash.css
@@ -131,3 +131,14 @@ body {
 {
     font-size: 20px;
 }
+
+.allot-coins
+{
+  border-radius: 30px 30px 30px 30px;
+  width: 50%;
+}
+
+.accordian .panel-heading{
+
+  height: 41px;
+}
