--- a/public/app/components/layout/layout.html
+++ b/public/app/components/layout/layout.html
@@ -4,16 +4,16 @@
       <div class="row">
          <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar" ng-show="isActive('manager')">
-               <li ng-class="{active: state.includes('root.tasks')}"><a ui-sref="root.tasks">Tasks</a></li>
-               <li ng-class="{active: state.includes('root.newTask')}"><a ui-sref="root.newTask">New Task</a></li>
+               <li ng-class="{active: state.includes('root.activities')}"><a ui-sref="root.activities">Activities</a></li>
+               <li ng-class="{active: state.includes('root.newActivity')}"><a ui-sref="root.newActivity">New Activity</a></li>
                <li ng-class="{active: state.includes('root.team') || state.includes('root.teamMember')}"><a ui-sref="root.team">Team</a></li>
             </ul>
             <ul class="nav nav-sidebar" ng-show="isActive('admin')">
-               <li><a href="#">Group of Activities</a></li>
+               <li ng-class="{active: state.includes('root.authorizeActivity')}"><a ui-sref="root.authorizeActivity">Authorize Activity</a></li>
                <li ng-class="{active: state.includes('root.allotCoins')}"><a ui-sref="root.allotCoins">Allot N Coins</a></li>
             </ul>
             <ul class="nav nav-sidebar" ng-show="isActive('user')">
-               <li class="active"><a href="">View Tasks</a></li>
+               <li class="active"><a href="">View Activities</a></li>
             </ul>
          </div>
          <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2" id="content">
