--- a/public/app/components/authorizeActivity/authorizeActivity.html
+++ b/public/app/components/authorizeActivity/authorizeActivity.html
@@ -46,8 +46,8 @@
                               <p>{{activity.description}}</p>
                              </div>
                              <div class="modal-footer">
-                        <button class="btn btn-success" type="button" ng-click="actionOnActivity(activity, 'transfer')" ng-if="activity.status == 'Completed'" data-dismiss="modal">Transfer</button>
-                        <button class="btn btn-danger" type="button" ng-click="actionOnActivity(activity, 'cancel')" ng-if="activity.status == 'Completed'" data-dismiss="modal">Cancel</button>
+                        <button class="btn btn-success" type="button" ng-click="actionOnActivity(activity, 'transfer')" data-dismiss="modal">Authorize</button>
+                        <button class="btn btn-danger" type="button" ng-click="actionOnActivity(activity, 'cancel')" data-dismiss="modal">Cancel</button>
                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                              </div>
                            </div>
